--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aioconsole>=0.8.2",
     "aiofiles>=25.1.0",
     "loguru>=0.7.3",
+    "openpyxl>=3.1.5",
     "patchright>=1.55.2",
     "ruamel-yaml>=0.18.16",
 ]
